plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.9'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'io.github.seoleeder'
version = '0.0.1-SNAPSHOT'
description = 'All-in-one Game Insight Platform: Real-time Discount, Game Metadata, and AI-driven Recommendation'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(25)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

ext {
	set('resilience4jVersion', "2.4.0")
	set('springCloudAwsVersion', "3.1.1")
}

dependencyManagement {
	imports {
		mavenBom "io.awspring.cloud:spring-cloud-aws-dependencies:${springCloudAwsVersion}"
	}
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'

	//flyway
	implementation 'org.flywaydb:flyway-core'
	runtimeOnly 'org.flywaydb:flyway-database-postgresql'

	//querydsl
	implementation 'com.querydsl:querydsl-jpa:5.1.0:jakarta'
	annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
	annotationProcessor "jakarta.persistence:jakarta.persistence-api"

	// JWT (JJWT)
	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'

	// Swagger
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.4'

	// Firebase Admin SDK
	implementation 'com.google.firebase:firebase-admin:9.8.0'

	// Resilience4j Starter
	implementation "io.github.resilience4j:resilience4j-spring-boot3:${resilience4jVersion}"

	// Spring AOP
	implementation 'org.springframework.boot:spring-boot-starter-aop'

	// Redis
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'

	// pgvector
	implementation 'org.hibernate.orm:hibernate-vector:6.6.48.Final'

	// Spring Cloud AWS
	implementation 'io.awspring.cloud:spring-cloud-aws-starter-parameter-store'

	annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'org.postgresql:postgresql'
	annotationProcessor 'org.projectlombok:lombok'

	// monitoring
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'io.micrometer:micrometer-registry-prometheus'

	// Micrometer Tracing
	implementation 'io.micrometer:micrometer-tracing-bridge-brave'

	// logging
	implementation 'com.github.loki4j:loki-logback-appender:1.5.2'

	//test
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testCompileOnly 'org.projectlombok:lombok'
	testAnnotationProcessor 'org.projectlombok:lombok'

	//testcontainer
	testImplementation 'org.springframework.boot:spring-boot-testcontainers'
	testImplementation 'org.testcontainers:junit-jupiter'
	testImplementation 'org.testcontainers:postgresql'
}

tasks.named('test') {
	useJUnitPlatform()
	// 테스트 실행 시 JVM 동적 에이전트 로딩(Dynamic Agent Loading) 허용 옵션 적용
	jvmArgs("-XX:+EnableDynamicAgentLoading")
}

tasks.withType(JavaCompile).configureEach {
	options.encoding = 'UTF-8'
}
